﻿[h1]v1.0.7[/h1]
You can find the DLL, PDB and XML files in the mod's [url=https://github.com/absoluteAquarian/SerousCommonLib/releases/tag/v1.0.6.2]GitHub repository[/url]

- Added the [i]BaseCallFunction[/i] API from Magic Storage